# Legal-AI-ssistant

./: .cspell.json  .gitignore  AGENTS.md  CLEANUP_NOTES.md  ENV_SETUP.md  README.md  SECURITY.md  legal_ai_system  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: defender-for-devops.yml
A_Scripts/: AI Checklist and Data.py  README.md  VISUALIZATION_STRATEGY.md  XAI_SETUP_GUIDE.md  __init__.py  agent_grok_config.py  agent_unified_config.py  auto_tagging.py  auto_tagging_agent.py  base_agent.py  citation_analysis.py  citation_analysis_agent.py  configuration_manager.py  constants.py  detailed_logging.py  document_processor_full.py  embedding_manager.py  enhanced_persistence.py  enhanced_vector_store.py  entity_extraction.py  entity_extraction_agent.py  error_recovery.py  hybrid_extractor.py  integration_service.py  knowledge_base_agent.py  knowledge_graph_manager.py  legal-ai-gui.tsx  legal_analysis.py  llm_providers.py  main.py  memory_manager.py  model_switcher.py  models.py  note_taking.py  ontology.py  ontology_extraction.py  optimized_vector_store.py  requirements.txt  reviewable_memory.py  security_manager.py  (+12 more)
A_Scripts/dependency_visualizations/: memory_management_masterpiece.xml  memory_performance_optimization.md  ultimate_drawio_masterpiece.xml  ultra_detailed_mermaid_diagrams.md
A_Scripts/legal_ai_system/: main.py  requirements.txt
aioredis/: __init__.py
analysis_output/: README.md  cleanup_plan.md  repo_summary.md
archive/faulty_files/: UTILS_LOG.md  criminal_law_parser.py  main.py
archive_legacy_components/: ARCHIVED_UTILS.md  Document_Parser.py  quick_start_vis_service.py
config/: __init__.py  agent_unified_config.py  constants.py  defaults.yaml  settings.py  workflow_config.py
docs/: ENV_SETUP.md  advanced_langgraph.md  api_endpoints.md  automatic_processing_pipeline.md  core_functionality_testing.md  design-system.md  developer_onboarding.md  file_audit.md  gui_integration_tasks.md  gui_setup.md  import_conventions.md  import_graph.json  integration_map.md  integration_plan.md  monitoring.md  shared_memory.md  stub_backlog.md  system_layout.md  test_setup.md
docs/diagrams/: realtime_analysis_workflow_sequence.md  service_container_initialization.md  service_container_initialization.puml
docs/legacy/: removed_backends.md  violation_review_agent_original.md
extraneous_files/: ARCHIVE.md  Criminal_Law_Parser_0.py  README.md  Sexual_Assault_Case_Analyzer_With_Conversation_Tracking_And_Sentence.py  convert_project_to_docs.py  legal-ai-fixes.md  list_project_structure.ps1  main2.py  main_gui_backup.py  start_with_path_fix.py  streamlit_app_backup.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: apiClient.ts  index.tsx  legal-ai-gui.tsx
langgraph/: __init__.py  graph.py
legal_ai_charts/: __init__.py
legal_ai_desktop/: __init__.py
legal_ai_network/: __init__.py
legal_ai_system/: AGENT.md  AGENTS.md  __init__.py  __main__.py  constants.py  log_setup.py
legal_ai_system/agents/: __init__.py  agent_nodes.py  auto_tagging_agent.py  citation_analysis_agent.py  document_processor_agent.py  document_processor_agent_v2.py  document_rewriter_agent.py  entity_extraction_agent.py  graph_inference_agent.py  knowledge_base_agent.py  knowledge_graph_reasoning_agent.py  legal_agents.py  legal_analysis_agent.py  legal_reasoning_engine.py  note_taking_agent.py  ontology_extraction_agent.py  precedent_matching_agent.py  semantic_analysis_agent.py  structural_analysis_agent.py  text_correction_agent.py  violation_detector_agent.py  violation_review.py
legal_ai_system/analytics/: __init__.py  keyword_extractor.py
legal_ai_system/api/: review_models.py  violation_models.py  websocket_manager.py
legal_ai_system/config/: __init__.py  agent_unified_config.py  agent_unified_config.pyi  constants.py  defaults.yaml  entity_patterns.yaml  settings.py  workflow_config.py
legal_ai_system/configs/: relationship_patterns.yaml
legal_ai_system/core/: __init__.py  agent_grok_config.py  agent_memory_store.py  agent_types.py  agent_unified_config.py  base_agent.py  claude_memory_store.py  config_models.py  configuration_manager.py  constants.py  detailed_logging.py  embedding_manager.py  enhanced_persistence.py  enhanced_vector_store.py  grok_config.py  llm_providers.py  ml_optimizer.py  model_switcher.py  models.py  optimized_vector_store.py  performance.py  providers.py  settings.py  shared_components.py  unified_exceptions.py  unified_memory_manager.py  unified_services.py  vector_metadata_repository.py  vector_store.py  vector_store_manager.py
legal_ai_system/docs/: AI Checklist and Data.txt  CLAUDE.md  ENV_SETUP.md  README.md  Review.txt  advanced_langgraph.md  agent_categories.md  api_endpoints.md  application_assessment.md  cleanup_backlog.md  developer_onboarding.md  file_audit.md  folder_cleanup_log.md  gui_setup.md  integration_plan.md  knowledge_graph_reasoning_agent.md  legacy_files.md  new 4.txt  postgres_downtime_impact.md  precedent_matching_agent.md  project_structure.txt  refactoring_plan.txt  stub_backlog.md  system_layout.md  test_setup.md
legal_ai_system/frontend/: index.html  legal-ai-gui.tsx  package.json  tsconfig.json
legal_ai_system/gui/: __init__.py  advanced_main_window.py  backend_bridge.py  db_connection_dialog.py  integrated_gui.py  legal-ai-pyqt6-enhanced.py  legal-ai-pyqt6-integrated.py  legal_ai_charts.py  legal_ai_pyqt6_enhanced.py  legal_ai_pyqt6_integrated.py  main_gui.py  memory_brain_core.py  memory_brain_widget.py  memory_table_model.py  startup_config_dialog.py  streamlit_app.py  tray_icon.py  viewer_windows.py  workflow_builder.py  workflow_progress_widget.py
legal_ai_system/integration_ready/: __init__.py  vector_store_enhanced.py
legal_ai_system/langgraph/: graph.py
legal_ai_system/legacy_extras/: Document_Parser.py  README.md  __init__.py  confidence_calibration.py  confidence_calibration_demo.py  document_processor.py  (+13 more)
legal_ai_widgets/: __init__.py
scripts/: migrate_database.py  run_tests.sh  setup_environment_task.py
(+259 files in other folders)
